[package]
name = "fuzzed_bevy_app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
] }

bevy_fuzz = { path = "../..", optional = true }

[features]
default = []
fuzz = ["bevy_fuzz"]