[package]
name = "fuzzed_bevy_app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_fuzz = { path = "../..", optional = true }

[features]
default = []
fuzz = [
  "bevy_fuzz",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy/hdr",
  "bevy/x11"
]